syntax = "proto3";

package portpb;
option go_package="portpb";

message Port {
    string abbreviation = 1;
    string name = 2;
    repeated double coordinates = 3;
    string city = 4;
    string province = 5;
    string country = 6;
    repeated string alias = 7;
    repeated string regions = 8;
    string timezone = 9;
    repeated string unlocs = 10;
}

message ImportResponse {
    int32 number_inserted = 1;
    int32 number_updated = 2;
    bool encounter_errors = 3;
}

message GetPortRequest {
    string abbreviation = 1;
}

service PortService {
    rpc Get(GetPortRequest) returns (Port) {};
    rpc Import(stream Port) returns (ImportResponse) {};
}
